--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -130,8 +130,9 @@
     <Content Include="Image\header.jpg" />
     <Content Include="Image\login.jpg" />
     <Content Include="Image\phuhieu.jpg" />
+    <Content Include="Page_Master\TrangChu.aspx" />
     <Content Include="reports\report.docx" />
-    <Content Include="home.Master" />
+    <Content Include="Master\TrangChu.Master" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -162,7 +163,6 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
-    <Content Include="TrangChu.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -195,14 +195,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="home.Master.cs">
-      <DependentUpon>home.Master</DependentUpon>
+    <Compile Include="Master\TrangChu.Master.cs">
+      <DependentUpon>TrangChu.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="home.Master.designer.cs">
-      <DependentUpon>home.Master</DependentUpon>
+    <Compile Include="Master\TrangChu.Master.designer.cs">
+      <DependentUpon>TrangChu.Master</DependentUpon>
     </Compile>
     <Compile Include="Models\myclass.cs" />
+    <Compile Include="Page_Master\TrangChu.aspx.cs">
+      <DependentUpon>TrangChu.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\TrangChu.aspx.designer.cs">
+      <DependentUpon>TrangChu.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -217,13 +224,6 @@
     </Compile>
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
-    </Compile>
-    <Compile Include="TrangChu.aspx.cs">
-      <DependentUpon>TrangChu.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="TrangChu.aspx.designer.cs">
-      <DependentUpon>TrangChu.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
