--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -112,6 +112,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="css\Login.css" />
     <Content Include="css\master.css" />
     <Content Include="css\StyleSheet1.css" />
     <Content Include="Default.aspx" />
@@ -126,10 +127,13 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Image\bg-bien.jpg" />
     <Content Include="Image\footer.png" />
     <Content Include="Image\header.jpg" />
     <Content Include="Image\login.jpg" />
+    <Content Include="Image\ic-login.png" />
     <Content Include="Image\phuhieu.jpg" />
+    <Content Include="Page_Master\Login.aspx" />
     <Content Include="Page_Master\TrangChu.aspx" />
     <Content Include="reports\report.docx" />
     <Content Include="Master\TrangChu.Master" />
@@ -203,6 +207,13 @@
       <DependentUpon>TrangChu.Master</DependentUpon>
     </Compile>
     <Compile Include="Models\myclass.cs" />
+    <Compile Include="Page_Master\Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Page_Master\TrangChu.aspx.cs">
       <DependentUpon>TrangChu.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
