--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -111,6 +111,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\cdn.datatables.net_1.11.3_css_dataTables.bootstrap4.min.css" />
+    <Content Include="Content\cdn.datatables.net_buttons_2.0.1_css_buttons.bootstrap4.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="css\Login.css" />
     <Content Include="css\master.css" />
@@ -134,6 +136,7 @@
     <Content Include="Image\ic-login.png" />
     <Content Include="Image\phuhieu.jpg" />
     <Content Include="Page_Master\Login.aspx" />
+    <Content Include="Page_Master\Manage_user.aspx" />
     <Content Include="Page_Master\TrangChu.aspx" />
     <Content Include="reports\report.docx" />
     <Content Include="Master\TrangChu.Master" />
@@ -145,6 +148,7 @@
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\my1.js" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
     <Content Include="Scripts\WebForms\Focus.js" />
     <Content Include="Scripts\WebForms\GridView.js" />
@@ -213,6 +217,13 @@
     </Compile>
     <Compile Include="Page_Master\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page_Master\Manage_user.aspx.cs">
+      <DependentUpon>Manage_user.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\Manage_user.aspx.designer.cs">
+      <DependentUpon>Manage_user.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page_Master\TrangChu.aspx.cs">
       <DependentUpon>TrangChu.aspx</DependentUpon>
