--- a/DHSLAPI/public/Web.config
+++ b/DHSLAPI/public/Web.config
@@ -39,9 +39,9 @@
     <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
-	<add name="Access-Control-Allow-Credentials" value="true"/>
-        <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
-	<add name="Access-Control-Allow-Methods" value="GET, POST, PUT, OPTIONS" />
+        <add name="Access-Control-Allow-Credentials" value="true" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, OPTIONS" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
@@ -80,7 +80,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="CSB_ConnectionString" connectionString="Data source=DESKTOP-RGO043O;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="CSB_ConnectionString" connectionString="Data source=.\SQLEXPRESS01;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
