--- a/DHSLAPI/public/Web.config
+++ b/DHSLAPI/public/Web.config
@@ -28,7 +28,6 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      <add name="OPTIONSVerbHandler" path="*" verb="OPTIONS" modules="ProtocolSupportModule" requireAccess="None" responseBufferLimit="4194304" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
@@ -39,9 +38,7 @@
     <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Allow-Credentials" value="true" />
-        <add name="Access-Control-Allow-Headers" value="Content-Type" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, OPTIONS,DELETE" />
+        <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
@@ -80,7 +77,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="CSB_ConnectionString" connectionString="Data source=.\SQLEXPRESS01;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="CSB_ConnectionString" connectionString="Data source=.\SQLEXPRESS;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
