--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -209,6 +209,7 @@
     <Content Include="css\manager_user.css" />
     <Content Include="css\manage_ship.css" />
     <Content Include="css\master.css" />
+    <Content Include="css\Ship_equiment.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -231,6 +232,7 @@
     <Content Include="Page_Master\Login.aspx" />
     <Content Include="Page_Master\Manage_ship.aspx" />
     <Content Include="Page_Master\Manage_user.aspx" />
+    <Content Include="Page_Master\Ship_equiment.aspx" />
     <Content Include="Page_Master\TrangChu.aspx" />
     <Content Include="reports\report.docx" />
     <Content Include="Master\TrangChu.Master" />
@@ -245,6 +247,7 @@
     <Content Include="Scripts\js\Manage_ship.js" />
     <Content Include="Scripts\js\Manage_User.js" />
     <Content Include="Scripts\js\Master.js" />
+    <Content Include="Scripts\js\Ship_equiment.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
     <Content Include="Scripts\WebForms\Focus.js" />
@@ -329,6 +332,13 @@
     </Compile>
     <Compile Include="Page_Master\Manage_user.aspx.designer.cs">
       <DependentUpon>Manage_user.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page_Master\Ship_equiment.aspx.cs">
+      <DependentUpon>Ship_equiment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\Ship_equiment.aspx.designer.cs">
+      <DependentUpon>Ship_equiment.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page_Master\TrangChu.aspx.cs">
       <DependentUpon>TrangChu.aspx</DependentUpon>
