--- a/DHSLAPI/public/Web.config
+++ b/DHSLAPI/public/Web.config
@@ -41,7 +41,7 @@
         <add name="Access-Control-Allow-Origin" value="*" />
         <add name="Access-Control-Allow-Credentials" value="true" />
         <add name="Access-Control-Allow-Headers" value="Content-Type" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, OPTIONS,DELETE" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, OPTIONS" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
