--- a/DHSLAPI/public/Web.config
+++ b/DHSLAPI/public/Web.config
@@ -28,6 +28,7 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="OPTIONSVerbHandler" path="*" verb="OPTIONS" modules="ProtocolSupportModule" requireAccess="None" responseBufferLimit="4194304" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
@@ -38,7 +39,9 @@
     <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
+        <add name="Access-Control-Allow-Credentials" value="true" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, OPTIONS" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
@@ -77,11 +80,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-<<<<<<< HEAD
-    <add name="CSB_ConnectionString" connectionString="Data source=.\SQLEXPRESS01;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-=======
-    <add name="CSB_ConnectionString" connectionString="Data source=.\SQLEXPRESS;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
->>>>>>> e0db95311a349948372abde9c5e358b52478bacb
+    <add name="CSB_ConnectionString" connectionString="Data source=DESKTOP-RGO043O;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
