--- a/DHSLAPI/DHSLAPI/Web.config
+++ b/DHSLAPI/DHSLAPI/Web.config
@@ -40,7 +40,7 @@
 		  <add name="Access-Control-Allow-Origin" value="*" />
 		  <add name="Access-Control-Allow-Credentials" value="true"/>
 		  <add name="Access-Control-Allow-Headers" value="Content-Type" />
-		  <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, OPTIONS" />
+		  <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, OPTIONS, DELETE " />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
