--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -204,12 +204,18 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\boxicons.min.css" />
+    <Content Include="Content\buttons.bootstrap4.min.css" />
     <Content Include="Content\cdn.datatables.net_1.11.3_css_dataTables.bootstrap4.min.css" />
     <Content Include="Content\cdn.datatables.net_buttons_2.0.1_css_buttons.bootstrap4.min.css" />
+    <Content Include="Content\dataTables.bootstrap4.min.css" />
+    <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\quill.bubble.css" />
     <Content Include="Content\quill.snow.css" />
     <Content Include="Content\remixicon.css" />
+    <Content Include="Content\responsive.bootstrap4.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\use.fontawesome.com_releases_v5.7.2_css_all.css" />
+    <Content Include="css\bootstrap.min.css" />
     <Content Include="css\login.css" />
     <Content Include="css\manager_user.css" />
     <Content Include="css\manage_ship.css" />
@@ -243,7 +249,17 @@
     <Content Include="reports\report.docx" />
     <Content Include="Master\TrangChu.Master" />
     <Content Include="Master\LayoutAdmin.Master" />
+    <Content Include="Scripts\bootstrap-4.6.1\bootstrap.bundle.js.map" />
+    <Content Include="Scripts\bootstrap-4.6.1\bootstrap.bundle.min.js.map" />
+    <Content Include="Scripts\bootstrap-4.6.1\bootstrap.js.map" />
+    <Content Include="Scripts\bootstrap-4.6.1\bootstrap.min.js.map" />
+    <Content Include="Content\fonts\bootstrap-icons.woff" />
+    <Content Include="Content\fonts\bootstrap-icons.woff2" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\bootstrap-4.6.1\bootstrap.bundle.js" />
+    <Content Include="Scripts\bootstrap-4.6.1\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\bootstrap-4.6.1\bootstrap.js" />
+    <Content Include="Scripts\bootstrap-4.6.1\bootstrap.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -258,10 +274,24 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\vendor\apexcharts.min.js" />
     <Content Include="Scripts\vendor\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\vendor\bootstrap.min.js" />
+    <Content Include="Scripts\vendor\buttons.bootstrap4.min.js" />
+    <Content Include="Scripts\vendor\buttons.colVis.min.js" />
+    <Content Include="Scripts\vendor\buttons.html5.min.js" />
+    <Content Include="Scripts\vendor\buttons.print.min.js" />
     <Content Include="Scripts\vendor\chart.min.js" />
+    <Content Include="Scripts\vendor\dataTables.bootstrap4.min.js" />
+    <Content Include="Scripts\vendor\dataTables.buttons.min.js" />
+    <Content Include="Scripts\vendor\dataTables.responsive.min.js" />
     <Content Include="Scripts\vendor\echarts.min.js" />
+    <Content Include="Scripts\vendor\jquery.dataTables.min.js" />
+    <Content Include="Scripts\vendor\jszip.min.js" />
+    <Content Include="Scripts\vendor\pdfmake.min.js" />
+    <Content Include="Scripts\vendor\popper.min.js" />
     <Content Include="Scripts\vendor\quill.min.js" />
+    <Content Include="Scripts\vendor\responsive.bootstrap4.min.js" />
     <Content Include="Scripts\vendor\tinymce.min.js" />
+    <Content Include="Scripts\vendor\vfs_fonts.js" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
     <Content Include="Scripts\WebForms\Focus.js" />
     <Content Include="Scripts\WebForms\GridView.js" />
@@ -405,6 +435,7 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
     <Content Include="template\temp_common.docx" />
+    <Content Include="Scripts\vendor\jquery.nicescroll.min.js" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
