--- a/DHSLAPI/public/Web.config
+++ b/DHSLAPI/public/Web.config
@@ -80,7 +80,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="CSB_ConnectionString" connectionString="Data source=MSI;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="CSB_ConnectionString" connectionString="Data source=.\SQLEXPRESS;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
