Long third commit
Đã làm:
- Một số thay đổi trên Layout
- Thay đổi trên ShipActivity.aspx:
+ Lúc bắt đầu vào không hiện tàu
+ Dropdown đã thực hiện được: Xem thông tin tàu + Xem lịch sử các hoạt động tàu
Hoạt động tiếp theo:
- Bổ sung chức năng cập nhật hoạt động tàu
- Thay đổi Trang chủ cho giống mẫu trong Excel

--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -239,6 +239,7 @@
     <Content Include="Image\header.jpg" />
     <Content Include="Image\login.jpg" />
     <Content Include="Image\ic-login.png" />
+    <Content Include="Image\logo_CSB.png" />
     <Content Include="Image\phuhieu.jpg" />
     <Content Include="Image\Ships\boat.jpg" />
     <Content Include="Image\Ships\default.jpg" />
