--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -223,6 +223,8 @@
     <Content Include="css\master.css" />
     <Content Include="css\Ship_equiment.css" />
     <Content Include="Default.aspx" />
+    <Content Include="Demos\Detail.html" />
+    <Content Include="Demos\ShipAction.html" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
