--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -254,6 +254,7 @@
     <Content Include="Page_Master\ShipActivity.aspx" />
     <Content Include="Page_Master\Ship_equiment.aspx" />
     <Content Include="Page_Master\TrangChu.aspx" />
+    <Content Include="Page_Master\Update_Ship.aspx" />
     <Content Include="reports\report.docx" />
     <Content Include="Master\TrangChu.Master" />
     <Content Include="Master\LayoutAdmin.Master" />
@@ -426,6 +427,13 @@
     </Compile>
     <Compile Include="Page_Master\TrangChu.aspx.designer.cs">
       <DependentUpon>TrangChu.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page_Master\Update_Ship.aspx.cs">
+      <DependentUpon>Update_Ship.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\Update_Ship.aspx.designer.cs">
+      <DependentUpon>Update_Ship.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
