--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -255,6 +255,7 @@
     <Content Include="Image\Ships\Tau1.jpg" />
     <Content Include="Page_Master\Add_Ship.aspx" />
     <Content Include="Page_Master\Change_Password.aspx" />
+    <Content Include="Page_Master\Information_User.aspx" />
     <Content Include="Page_Master\Login.aspx" />
     <Content Include="Page_Master\Manage_ship.aspx" />
     <Content Include="Page_Master\Manage_user.aspx" />
@@ -408,6 +409,13 @@
     </Compile>
     <Compile Include="Page_Master\Change_Password.aspx.designer.cs">
       <DependentUpon>Change_Password.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page_Master\Information_User.aspx.cs">
+      <DependentUpon>Information_User.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\Information_User.aspx.designer.cs">
+      <DependentUpon>Information_User.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page_Master\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
