--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -261,6 +261,7 @@
     <Content Include="Page_Master\Login.aspx" />
     <Content Include="Page_Master\Manage_flotilla.aspx" />
     <Content Include="Page_Master\Manage_ship.aspx" />
+    <Content Include="Page_Master\Manage_squadron.aspx" />
     <Content Include="Page_Master\Manage_user.aspx" />
     <Content Include="Page_Master\Null.aspx" />
     <Content Include="Page_Master\ShipActivity.aspx" />
@@ -441,6 +442,13 @@
     </Compile>
     <Compile Include="Page_Master\Manage_ship.aspx.designer.cs">
       <DependentUpon>Manage_ship.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page_Master\Manage_squadron.aspx.cs">
+      <DependentUpon>Manage_squadron.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\Manage_squadron.aspx.designer.cs">
+      <DependentUpon>Manage_squadron.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page_Master\Manage_user.aspx.cs">
       <DependentUpon>Manage_user.aspx</DependentUpon>
