--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -225,7 +225,7 @@
     <Content Include="Content\use.fontawesome.com_releases_v5.7.2_css_all.css" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\bootstrap3.css" />
-    <Content Include="css\login.css" />
+    <Content Include="css\login1.css" />
     <Content Include="css\manager_user.css" />
     <Content Include="css\manage_ship.css" />
     <Content Include="css\master.css" />
