--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -270,6 +270,7 @@
     <Content Include="Page_Master\Manage_Ranking.aspx" />
     <Content Include="Page_Master\Manage_ship.aspx" />
     <Content Include="Page_Master\Manage_squadron.aspx" />
+    <Content Include="Page_Master\Manage_Tau.aspx" />
     <Content Include="Page_Master\Manage_user.aspx" />
     <Content Include="Page_Master\Null.aspx" />
     <Content Include="Page_Master\ShipActivity.aspx" />
@@ -499,6 +500,13 @@
     </Compile>
     <Compile Include="Page_Master\Manage_squadron.aspx.designer.cs">
       <DependentUpon>Manage_squadron.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page_Master\Manage_Tau.aspx.cs">
+      <DependentUpon>Manage_Tau.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\Manage_Tau.aspx.designer.cs">
+      <DependentUpon>Manage_Tau.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page_Master\Manage_user.aspx.cs">
       <DependentUpon>Manage_user.aspx</DependentUpon>
