--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -299,6 +299,7 @@
     </Content>
     <Content Include="Page_Master\Ship_equipment2.aspx" />
     <Content Include="Page_Master\Ship_Profile.aspx" />
+    <Content Include="Page_Master\TinhNangChuYeu.aspx" />
     <Content Include="Page_Master\TinhNangThietBi.aspx" />
     <Content Include="Page_Master\TrangChu.aspx" />
     <Content Include="Page_Master\Update_Ship.aspx" />
@@ -588,6 +589,13 @@
     </Compile>
     <Compile Include="Page_Master\Ship_Profile.aspx.designer.cs">
       <DependentUpon>Ship_Profile.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page_Master\TinhNangChuYeu.aspx.cs">
+      <DependentUpon>TinhNangChuYeu.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\TinhNangChuYeu.aspx.designer.cs">
+      <DependentUpon>TinhNangChuYeu.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page_Master\TinhNangThietBi.aspx.cs">
       <DependentUpon>TinhNangThietBi.aspx</DependentUpon>
